Issue #13 - Update size and alignment for login and register pages

--- a/www/common.css
+++ b/www/common.css
@@ -83,8 +83,8 @@ div.registerbox1 {
 	bottom: 0;
 	left: 0;
 	right: 0;
-   	width: 660px;
-   	height: 640px;
+   	width: 900px;
+   	height: 680px;
    	background-color: #6E6767;
     text-align: center;
    	opacity: 0.90;
